pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: podName
  labels:
    name: labelName
spec:
  containers:
    - name: containerName
      image: image:tag
      ports:
        - containerPort: 1111
      volumeMounts:
      - mountPath: /volumePath
        name: volumeName
  volumes:
  - name: volumeName
    emptyDir: {}
