service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviceName
spec:
  type: NodePort
  ports:
    - port: 1111
      protocol: TCP
      targetPort: 1111
      nodePort: 30080
  selector:
    name: podName
